--- a/package.json
+++ b/package.json
@@ -1,12 +1,36 @@
 {
   "name": "whatsapp-ai-chatbot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node dist/app.js",
+    "dev": "ts-node-dev src/app.ts"
   },
-  "keywords": [],
+  "keywords": [
+    "whatsapp",
+    "api",
+    "chatbot",
+    "ai"
+  ],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "WhatsApp API integration with AI chatbot",
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^22.15.3",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "axios": "^1.9.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.0",
+    "winston": "^3.17.0"
+  }
 }
