Updated to use Redis

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^5.0.1",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.15.3",
+    "@types/redis": "^4.0.10",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
@@ -31,6 +32,7 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "morgan": "^1.10.0",
+    "redis": "^5.0.1",
     "winston": "^3.17.0"
   }
 }
