--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/app.js",
     "dev": "ts-node-dev src/app.ts",
     "test": "jest --runInBand",
-    "test:unit": "jest -c jest.config.ts -- --runInBand",
+    "test:unit": "jest --config jest.config.ts --runInBand",
     "test:watch": "jest -- --watchAll --runInBand",
     "test:coverage": "jest -- --coverage --runInBand"
   },
