--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "ts-node-dev src/app.ts",
     "test": "jest --runInBand",
     "test:unit": "jest --config jest.config.ts --runInBand",
+    "test:integration": "jest --config jest.integration.config.ts --runInBand",
     "test:watch": "jest -- --watchAll --runInBand",
     "test:coverage": "jest -- --coverage --runInBand"
   },
@@ -31,6 +32,7 @@
     "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
     "supertest": "^7.1.0",
+    "testcontainers": "^10.25.0",
     "ts-jest": "^29.3.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
