--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -83,48 +83,48 @@ jobs:
       - name: Run integration tests
         run: npm run test:integration
   
-  build-and-push:
-    name: Build and Push Docker Image
-    needs: [unit-tests, integration-tests]
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+  # build-and-push:
+  #   name: Build and Push Docker Image
+  #   needs: [unit-tests, integration-tests]
+  #   runs-on: ubuntu-latest
+  #   if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
     
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
       
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
       
-      - name: Login to Dockerhub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  #     - name: Login to Dockerhub
+  #       uses: docker/login-action@v3
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/republica-whatsapp-ai-chatbot:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/republica-whatsapp-ai-chatbot:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+  #     - name: Build and push
+  #       uses: docker/build-push-action@v6
+  #       with:
+  #         context: .
+  #         push: true
+  #         tags: |
+  #           ${{ secrets.DOCKERHUB_USERNAME }}/republica-whatsapp-ai-chatbot:latest
+  #           ${{ secrets.DOCKERHUB_USERNAME }}/republica-whatsapp-ai-chatbot:${{ github.sha }}
+  #         cache-from: type=gha
+  #         cache-to: type=gha,mode=max
   
-  deploy:
-    name: Deploy to Render
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+  # deploy:
+  #   name: Deploy to Render
+  #   needs: build-and-push
+  #   runs-on: ubuntu-latest
+  #   if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
     
-    steps:
-      - name: Trigger Render Deploy Hook
-        env:
-          RENDER_DEPLOY_HOOK_URL: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
-        run: |
-          curl -X POST \
-               -H "Content-Type: application/json" \
-               -d '{}' \
-               $RENDER_DEPLOY_HOOK_URL
+  #   steps:
+  #     - name: Trigger Render Deploy Hook
+  #       env:
+  #         RENDER_DEPLOY_HOOK_URL: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+  #       run: |
+  #         curl -X POST \
+  #              -H "Content-Type: application/json" \
+  #              -d '{}' \
+  #              $RENDER_DEPLOY_HOOK_URL
