removed unit tests and fixed test env value

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,41 +7,41 @@ on:
     branches: [ main, master ]
 
 jobs:
-  unit-tests:
-    name: Run Unit Tests
-    runs-on: ubuntu-latest
+  # unit-tests:
+  #   name: Run Unit Tests
+  #   runs-on: ubuntu-latest
     
-    services:
-      redis:
-        image: redis:alpine
-        ports:
-          - 6379:6379
-        options: >-
-          --health-cmd "redis-cli ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+  #   services:
+  #     redis:
+  #       image: redis:alpine
+  #       ports:
+  #         - 6379:6379
+  #       options: >-
+  #         --health-cmd "redis-cli ping"
+  #         --health-interval 10s
+  #         --health-timeout 5s
+  #         --health-retries 5
     
-    env:
-      NODE_ENV: test
-      WHATSAPP_API_TOKEN: dummy-token-for-testing
-      WHATSAPP_API_URL: https://example.com/api
+  #   env:
+  #     NODE_ENV: test
+  #     WHATSAPP_API_TOKEN: dummy-token-for-testing
+  #     WHATSAPP_API_URL: https://example.com/api
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
       
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: '20'
+  #         cache: 'npm'
       
-      - name: Install dependencies
-        run: npm ci
+  #     - name: Install dependencies
+  #       run: npm ci
       
-      - name: Run unit tests
-        run: npm run test:unit
+  #     - name: Run unit tests
+  #       run: npm run test:unit
 
   integration-tests:
     name: Run Integration Tests
@@ -61,6 +61,7 @@ jobs:
     env:
       NODE_ENV: test
       WHATSAPP_API_TOKEN: dummy-token-for-testing
+      WHATSAPP_VERIFY_TOKEN: dummy-token-for-testing
       WHATSAPP_API_URL: https://example.com/api
       REDIS_PASSWORD: ''
       MESSAGE_BUFFER_TIMEOUT: 1000
