readme and tests

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,31 @@
 # Server Configuration
-PORT=3000
-NODE_ENV=development
+PORT=5000
+NODE_ENV=production
 
 # WhatsApp API Configuration
 WHATSAPP_API_TOKEN=your_whatsapp_api_token
 WHATSAPP_API_URL=https://graph.facebook.com/v17.0/your_phone_number_id/messages
+WHATSAPP_VERIFY_TOKEN=your_verify_token
 
 # AI Microservice
-AI_SERVICE_URL=https://chatbot-republic-ai-microservice.onrender.com/rag/query
+AI_SERVICE_URL=https://your-ai-service.com/rag/query
 
 # Message Buffer Configuration
 MESSAGE_BUFFER_TIMEOUT=5000  # Time in milliseconds to wait for additional messages
 
+# Redis Configuration
+REDIS_URL=redis://localhost:6379
+REDIS_TTL=60000  # Time in milliseconds to store messages in Redis
+REDIS_PASSWORD=your_redis_password
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
 # Logging
 LOG_LEVEL=info
+
+# Keep-Alive Configuration
+KEEP_ALIVE_ENABLED=true
+KEEP_ALIVE_INTERVAL=840000
+KEEP_ALIVE_URL=https://whatsapp-ai-chatbot-qd42.onrender.com
+AI_SERVICE_KEEP_ALIVE=true
+AI_HEALTH_ENDPOINT=/health/ready
